--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,15 +1,16 @@
 $body-font-family: Roboto;
 $color-black: black;
 $color-white: white;
+$font-weight-700: 700;
 
 $h1-font-size: 42px;
-$h1-font-weight: 700;
+$h1-font-weight: $font-weight-700;
 $h1-font-color: #fdfcfc;
 
 
 $h2-font-size: 26px;
 $h2-font-family: 'Source Sans Pro';
-$h2-font-weight: $h1-font-weight;
+$h2-font-weight: $font-weight-700;
 $h2-font-color: #ffffff;
 
 $h3-font-size: 18px;
