--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,7 @@
 @import 'normalize';
 @import 'variables';
 @import 'general';
+@import 'container';
+@import 'header';
+@import 'welcome';
+@import 'footer';
