--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,3 +1,62 @@
 @import 'normalize';
 @import 'variables';
 @import 'general';
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+}
+
+footer {
+    max-width: 1300px;
+    background-color: $p-font-color;
+    height: 407px;
+    font-weight: $p-font-weight;
+    font-size: $p-font-size;
+    color: #aab2bd;
+    font-family: $body-font-family;
+}
+
+.footer {
+    margin: 0 11.15%;
+    &__menu {
+        display: flex;
+        justify-content: space-between;
+        h3 {
+            font-size: $h3-font-size;
+            font-weight: 500;
+            color: #e6e9ed;
+            padding: 43px 0 28px 0;
+        }
+        a {
+            color: #aab2bd;
+            line-height: 2;
+        }
+    }
+}
+
+.footer__social {
+    text-align: center;
+}
+
+.social {
+    margin: 40px auto 20px auto;
+    &__block {
+        width: 40px;
+        height: 40px;
+        background-color: $color-mainYellow;
+        margin-right: 1px;
+        display: inline-block;
+        color: $color-white;
+        border-radius: 2px;
+        position: relative;
+        i {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+}
