--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -35,6 +35,10 @@ h2 {
         &_little {
             width: 330px;
         }
+        /* for history */
+        &_history {
+            width: 220px;
+        }
     }
     /* yellow buttons*/
     &__yellow-btn {
