some fix of index.html

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -8,6 +8,21 @@
         top: 0;
     }
     &__container {
-        @extend %container;
+
+    }
+}
+
+.nav {
+
+    &__block {
+        display: inline-block;
+list-style: none;
+
+    }
+    &__element {
+
+    }
+    &__link {
+
     }
 }
