--- a/src/scss/_welcome.scss
+++ b/src/scss/_welcome.scss
@@ -6,7 +6,5 @@
     &--bgColor {
         background-color: $color-mainYellow;
     }
-    &__container {
-        @extend %container;
-    }
+    &__container {}
 }
