--- a/src/scss/_features.scss
+++ b/src/scss/_features.scss
@@ -34,5 +34,10 @@
     width: 30%;
     height: 100px;
     margin: 1em;
+    transition: background-color 1s ease;
+
+    &:hover {
+      background-color: $color-mainYellow;
+    }
   }
 }
