--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -4,7 +4,7 @@
 /* для заголовков к основному классу прибавлять класс grey-name*/
 
 
-/* для жёлтыхк кнопок основному классу  прибавлять класс grey-name_little*/
+/* для жёлтыхк кнопок основному классу  прибавлять класс grey-name*/
 
 .grey-name {
     font-size: $h2-font-size;
