--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 @import 'container';
 @import 'header';
 @import 'welcome';
+@import 'projects';
 @import 'team';
 @import 'hire';
 @import 'footer';
