--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -3,6 +3,11 @@
     margin: 0 auto;
 }
 
+.footer-wrapper {
+    width: 100%;
+    background-color: $p-font-color;
+}
+
 .footer {
     @extend %container;
     &__list {
