partials for nunjucks

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -7,7 +7,7 @@ ul {
 }
 
 .footer-wrapper {
-    max-width: 1300px;
+    width: 100vw;
     background-color: $p-font-color;
     height: 407px;
     font-weight: $p-font-weight;
