--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,8 +11,12 @@ $h3-font-weight: 400;
 $color-black: black;
 $color-white: white;
 $color-mainYellow: #ffc038;
+$color-logoBorder: #fff200;
 
+
+$color-mainGrey: #464646;
 $p-font-color: #363636;
+
 $h1-font-color: #fdfcfc;
 $h2-font-color: #ffffff;
 $h3-font-color: $color-black;
