--- a/src/templates/partials/_process.html
+++ b/src/templates/partials/_process.html
@@ -1,4 +1,6 @@
 <section class="process">
-    <h2>how we work</h2>
-    <div class="process__content"></div>
+    <div class="container">
+        <h2>how we work</h2>
+        <div class="process__content"></div>
+    </div>
 </section>
