--- a/src/scss/_history.scss
+++ b/src/scss/_history.scss
@@ -11,6 +11,9 @@
     justify-content: space-around;
     .history__left {
       width: 30%;
+      img{
+        height: 100px;
+      }
     }
 
     .history__right {
