--- a/src/templates/partials/_welcome.html
+++ b/src/templates/partials/_welcome.html
@@ -1,9 +1,21 @@
 <section class="welcome welcome--bgColor">
     <div class="container">
-
-        <h1>unique-tech app development</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum dicta nobis aliquam iusto asperiores obcaecati
-            ab iure ipsum corporis, magni vitae recusandae dolore nostrum iste officia totam tempore ipsam molestias.</p>
-        <button class="" type="button">View More</button>
+        <figure class="hero">
+            <figcaption class="hero__message">
+                <h1 class="hero__title">unique-tech<br> app development</h1>
+                <p class="hero__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. laboris
+                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                    qui officia deserunt mollit. laborum. Sed ut perspiciatis unde omnis iste. natus error sit voluptatem
+                    accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
+                    quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
+                    aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione. voluptatem sequi. nesciunt.
+                    Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia
+                    non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                <a class="hero__more" href="#">View More</a>
+            </figcaption>
+            <div class="hero__sliderBox"></div>
+        </figure>
     </div>
 </section>
