--- a/src/scss/_features.scss
+++ b/src/scss/_features.scss
@@ -1,32 +1,40 @@
 @import "variables";
 
 .features {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 3em;
   &__container {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 3em;
-  }
-  &__heading {
-    font-size: $h2-font-size;
-    font-family: $h2-font-family;
-    font-weight: $h2-font-weight;
-    color: $h2-font-color;
-    width: 100%;
-    height: 2em;
-    text-transform: uppercase;
-    vertical-align: middle;
-    box-shadow: $h2-box-shadow;
-    margin: 2em 20em;
-    flex-grow: 3;
-    text-align: center;
-    border: 1px solid $h2-bg-color;
-    background-color: $h2-bg-color;
-    display: flex;
     justify-content: center;
-    align-items: center;
-
-    //display: block;
   }
+&__content{
+display: flex;
+  flex-wrap: wrap;
+}
+  &__heading{
+    text-transform: uppercase;
+  }
+  //&__heading {
+  //  font-size: $h2-font-size;
+  //  font-family: $h2-font-family;
+  //  font-weight: $h2-font-weight;
+  //  color: $h2-font-color;
+  //  width: 100%;
+  //  height: 2em;
+  //  text-transform: uppercase;
+  //  vertical-align: middle;
+  //  box-shadow: $h2-box-shadow;
+  //  margin: 2em 20em;
+  //  flex-grow: 3;
+  //  text-align: center;
+  //  border: 1px solid $h2-bg-color;
+  //  background-color: $h2-bg-color;
+  //  display: flex;
+  //  justify-content: center;
+  //  align-items: center;
+  //
+  //  //display: block;
+  //}
   &__section {
     display: flex;
     justify-content: space-between;
