--- a/src/templates/partials/_features.html
+++ b/src/templates/partials/_features.html
@@ -1,101 +1,115 @@
 <section class="features">
     <div class="container features__container">
-        <h3 class="features__heading">our features</h3>
-        <div class="features__section">
-            <!--<img src="img/svg/icons/notes27.svg">-->
-            <div>
-                <h3 class="features__head">Visual Composer</h3>
-                <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or
-                    to
-                    remember any shortcodes with our. </p></div>
-        </div>
-        <div class="features__section">
-            <!--<img src="img/svg/icons/notes27.svg">-->
+        <h3 class="features__heading grey-name">our features</h3>
+        <div class="features__content">
+            <div class="features__section">
+                <!--<img src="img/svg/icons/notes27.svg">-->
+                <div>
+                    <h3 class="features__head">Visual Composer</h3>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or
+                        to
+                        remember any shortcodes with our. </p></div>
+            </div>
+            <div class="features__section">
+                <!--<img src="img/svg/icons/notes27.svg">-->
 
-            <div>
-                <h3 class="features__head">Responsive</h3>
-                <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
-                    remember any shortcodes with our. </p>
+                <div>
+                    <h3 class="features__head">Responsive</h3>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to
+                        remember any shortcodes with our. </p>
+                </div>
             </div>
-        </div>
-        <div class="features__section">
-            <!--<img src="img/svg/icons/notes27.svg">-->
-            <div>
-                <h3 class="features__head">Retina Ready</h3>
-                <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
-                    remember any shortcodes with our. </p>
+            <div class="features__section">
+                <!--<img src="img/svg/icons/notes27.svg">-->
+                <div>
+                    <h3 class="features__head">Retina Ready</h3>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to
+                        remember any shortcodes with our. </p>
+                </div>
             </div>
-        </div>
-        <div class="features__section">
-            <img src="img/svg/icons/notes27.svg">
-            <div>
-                <h3 class="features__head">Typography</h3>
-                <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
-                    remember any shortcodes with our. </p>
+            <div class="features__section">
+                <img src="img/svg/icons/notes27.svg">
+                <div>
+                    <h3 class="features__head">Typography</h3>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to
+                        remember any shortcodes with our. </p>
+                </div>
             </div>
-        </div>
-        <div class="features__section">
-            <img src="img/svg/icons/notes27.svg">
-            <div>
-                <h3 class="features__head">VTheme Options Pannel</h3>
-                <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
-                    remember any shortcodes with our. </p>
+            <div class="features__section">
+                <img src="img/svg/icons/notes27.svg">
+                <div>
+                    <h3 class="features__head">VTheme Options Pannel</h3>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to
+                        remember any shortcodes with our. </p>
+                </div>
             </div>
-        </div>
-        <div class="features__section">
-            <img src="img/svg/icons/notes27.svg">
-            <div>
-                <h3 class="features__head">Dummy Content</h3>
-                <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
-                    remember any shortcodes with our. </p>
+            <div class="features__section">
+                <img src="img/svg/icons/notes27.svg">
+                <div>
+                    <h3 class="features__head">Dummy Content</h3>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to
+                        remember any shortcodes with our. </p>
+                </div>
             </div>
-        </div>
-        <div class="features__section">
-            <img src="img/svg/icons/notes27.svg">
-            <div>
-                <h3 class="features__head">Many Style Available</h3>
-                <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
-                    remember any shortcodes with our. </p>
+            <div class="features__section">
+                <img src="img/svg/icons/notes27.svg">
+                <div>
+                    <h3 class="features__head">Many Style Available</h3>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to
+                        remember any shortcodes with our. </p>
+                </div>
             </div>
-        </div>
-        <div class="features__section">
-            <img src="img/svg/icons/notes27.svg">
-            <div>
-                <h3 class="features__head">Header Style</h3>
-                <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
-                    remember any shortcodes with our. </p>
+            <div class="features__section">
+                <img src="img/svg/icons/notes27.svg">
+                <div>
+                    <h3 class="features__head">Header Style</h3>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to
+                        remember any shortcodes with our. </p>
+                </div>
             </div>
-        </div>
-        <div class="features__section">
-            <img src="img/svg/icons/notes27.svg">
-            <div>
-                <h3 class="features__head">10000+ icons</h3>
-                <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
-                    remember any shortcodes with our. </p>
+            <div class="features__section">
+                <img src="img/svg/icons/notes27.svg">
+                <div>
+                    <h3 class="features__head">10000+ icons</h3>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to
+                        remember any shortcodes with our. </p>
+                </div>
             </div>
-        </div>
-        <div class="features__section">
-            <img src="img/svg/icons/notes27.svg">
-            <div>
-                <h3 class="features__head">Support</h3>
-                <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
-                    remember any shortcodes with our. </p>
+            <div class="features__section">
+                <img src="img/svg/icons/notes27.svg">
+                <div>
+                    <h3 class="features__head">Support</h3>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to
+                        remember any shortcodes with our. </p>
+                </div>
             </div>
-        </div>
-        <div class="features__section">
-            <img src="img/svg/icons/notes27.svg">
-            <div>
-                <h3 class="features__head">Update</h3>
-                <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
-                    remember any shortcodes with our. </p>
+            <div class="features__section">
+                <img src="img/svg/icons/notes27.svg">
+                <div>
+                    <h3 class="features__head">Update</h3>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to
+                        remember any shortcodes with our. </p>
+                </div>
             </div>
-        </div>
-        <div class="features__section">
-            <img src="img/svg/icons/notes27.svg">
-            <div>
-                <h3 class="features__head">SEO Ready</h3>
-                <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
-                    remember any shortcodes with our. </p>
+            <div class="features__section">
+                <img src="img/svg/icons/notes27.svg">
+                <div>
+                    <h3 class="features__head">SEO Ready</h3>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to
+                        remember any shortcodes with our. </p>
+                </div>
             </div>
         </div>
     </div>
@@ -103,65 +117,65 @@
 
 
 <!--<section class="feautures">-->
-    <!--<h3>our features</h3>-->
-    <!--<div>-->
-        <!--<h3>Visual Composer</h3>-->
-        <!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
-        <!--</p>-->
-    <!--</div>-->
-    <!--<div>-->
-        <!--<h3>Responsive</h3>-->
-        <!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
-        <!--</p>-->
-    <!--</div>-->
-    <!--<div>-->
-        <!--<h3>Retina Ready</h3>-->
-        <!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
-        <!--</p>-->
-    <!--</div>-->
-    <!--<div>-->
-        <!--<h3>Typography</h3>-->
-        <!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
-        <!--</p>-->
-    <!--</div>-->
-    <!--<div>-->
-        <!--<h3>VTheme Options Pannel</h3>-->
-        <!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
-        <!--</p>-->
-    <!--</div>-->
-    <!--<div>-->
-        <!--<h3>Dummy Content</h3>-->
-        <!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
-        <!--</p>-->
-    <!--</div>-->
-    <!--<div>-->
-        <!--<h3>Many Style Available</h3>-->
-        <!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
-        <!--</p>-->
-    <!--</div>-->
-    <!--<div>-->
-        <!--<h3>Header Style</h3>-->
-        <!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
-        <!--</p>-->
-    <!--</div>-->
-    <!--<div>-->
-        <!--<h3>10000+ icons</h3>-->
-        <!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
-        <!--</p>-->
-    <!--</div>-->
-    <!--<div>-->
-        <!--<h3>Support</h3>-->
-        <!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
-        <!--</p>-->
-    <!--</div>-->
-    <!--<div>-->
-        <!--<h3>Update</h3>-->
-        <!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
-        <!--</p>-->
-    <!--</div>-->
-    <!--<div>-->
-        <!--<h3>SEO Ready</h3>-->
-        <!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
-        <!--</p>-->
-    <!--</div>-->
+<!--<h3>our features</h3>-->
+<!--<div>-->
+<!--<h3>Visual Composer</h3>-->
+<!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
+<!--</p>-->
+<!--</div>-->
+<!--<div>-->
+<!--<h3>Responsive</h3>-->
+<!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
+<!--</p>-->
+<!--</div>-->
+<!--<div>-->
+<!--<h3>Retina Ready</h3>-->
+<!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
+<!--</p>-->
+<!--</div>-->
+<!--<div>-->
+<!--<h3>Typography</h3>-->
+<!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
+<!--</p>-->
+<!--</div>-->
+<!--<div>-->
+<!--<h3>VTheme Options Pannel</h3>-->
+<!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
+<!--</p>-->
+<!--</div>-->
+<!--<div>-->
+<!--<h3>Dummy Content</h3>-->
+<!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
+<!--</p>-->
+<!--</div>-->
+<!--<div>-->
+<!--<h3>Many Style Available</h3>-->
+<!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
+<!--</p>-->
+<!--</div>-->
+<!--<div>-->
+<!--<h3>Header Style</h3>-->
+<!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
+<!--</p>-->
+<!--</div>-->
+<!--<div>-->
+<!--<h3>10000+ icons</h3>-->
+<!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
+<!--</p>-->
+<!--</div>-->
+<!--<div>-->
+<!--<h3>Support</h3>-->
+<!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
+<!--</p>-->
+<!--</div>-->
+<!--<div>-->
+<!--<h3>Update</h3>-->
+<!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
+<!--</p>-->
+<!--</div>-->
+<!--<div>-->
+<!--<h3>SEO Ready</h3>-->
+<!--<p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.-->
+<!--</p>-->
+<!--</div>-->
 <!--</section>-->
