--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,15 +1,14 @@
-%container {
+.footer {
+    width: 100vw;
+    background-color: $p-font-color;
+}
+
+.container {
     max-width: 1004px;
     margin: 0 auto;
 }
 
-.footer-wrapper {
-    width: 100%;
-    background-color: $p-font-color;
-}
-
-.footer {
-    @extend %container;
+.footer-inner {
     &__list {
         list-style: none;
     }
@@ -30,7 +29,7 @@
     }
 }
 
-.footer__social {
+.footer-inner__social {
     text-align: center;
 }
 
