--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -1,6 +1,6 @@
-<footer class="footer-wrapper">
+<footer class="footer">
     <div class="container">
-        <section class="footer">
+        <section class="footer-inner">
             <nav class="footer__menu">
                 <ul class="footer__list">
                     <h3 class="menu__h3">PORTFOLIO</h3>
