todo change svg color

--- a/src/scss/_features.scss
+++ b/src/scss/_features.scss
@@ -7,11 +7,11 @@
   &__container {
     justify-content: center;
   }
-&__content{
-display: flex;
-  flex-wrap: wrap;
-}
-  &__heading{
+  &__content {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  &__heading {
     text-transform: uppercase;
   }
   //&__heading {
@@ -41,12 +41,22 @@ display: flex;
     padding: 1em;
     flex-grow: 1;
     width: 30%;
-    height: 100px;
+    //height: 100px;
     margin: 1em;
     transition: background-color 1s ease;
-
+    img {
+      width: 35px;
+      height: 23px;
+      //fill: #000099;
+    }
     &:hover {
       background-color: $color-mainYellow;
     }
+  }
+
+  &__paragraph {
+    font-weight: $p-font-weight;
+    font-size: $p-font-size;
+    color: $p-font-color;
   }
 }
