comments in partial removed

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,8 +4,8 @@
 @import 'container';
 @import 'header';
 @import 'welcome';
-//@import 'projects';
-//@import 'team';
+@import 'projects';
+@import 'team';
 @import 'hire';
 @import 'features';
 @import 'footer';
