--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
     <div class="container">
         <section class="footer-inner">
-            <nav class="footer__menu">
-                <ul class="footer__list">
+            <nav class="footer-inner__menu">
+                <ul class="footer-inner__list">
                     <h3 class="menu__h3">PORTFOLIO</h3>
                     <li><a class="link" href="#">Web Design</a></li>
                     <li><a class="link" href="#">Branding & Idefinity</a></li>
@@ -10,13 +10,13 @@
                     <li><a class="link" href="#">Print</a></li>
                     <li><a class="link" href="#">User Interfase</a></li>
                 </ul>
-                <ul class="footer__list">
+                <ul class="footer-inner__list">
                     <h3 class="menu__h3">ABOUT</h3>
                     <li><a class="link" href="#">The Company</a></li>
                     <li><a class="link" href="#">History</a></li>
                     <li><a class="link" href="#">Vision</a></li>
                 </ul>
-                <ul class="footer__list">
+                <ul class="footer-inner__list">
                     <h3 class="menu__h3">GALLERY</h3>
                     <li><a class="link" href="#">Flickr</a></li>
                     <li><a class="link" href="#">Picasa</a></li>
@@ -24,26 +24,26 @@
                     <li><a class="link" href="#">PhotoDune</a></li>
 
                 </ul>
-                <ul class="footer__list">
+                <ul class="footer-inner__list">
                     <h3 class="menu__h3">CONTACT</h3>
                     <li><a class="link" href="#">Basic Info</a></li>
                     <li><a class="link" href="#">Map</a></li>
                     <li><a class="link" href="#">Contact Form</a></li>
                 </ul>
             </nav>
-            <div class="footer__social">
+            <div class="footer-inner__social">
                 <div class="social">
                     <div class="social__block">
-                        <a><img class="social__icon" src="img/svg/icons/fb.svg"></a>
+                        <a href="#"><img class="social__icon" src="img/svg/icons/fb.svg"></a>
                     </div>
                     <div class="social__block">
-                        <a><img class="social__icon" src="img/svg/icons/tw.svg"></a>
+                        <a href="#"><img class="social__icon" src="img/svg/icons/tw.svg"></a>
                     </div>
                     <div class="social__block">
-                        <a><img class="social__icon" src="img/svg/icons/g-plus.svg"></a>
+                        <a href="#"><img class="social__icon" src="img/svg/icons/g-plus.svg"></a>
                     </div>
                     <div class="social__block">
-                        <a><img class="social__icon" src="img/svg/icons/lin.svg"></a>
+                        <a href="#"><img class="social__icon" src="img/svg/icons/lin.svg"></a>
                     </div>
                 </div>
                 <p>Copiyright © 2015 Syed Miraj.All rights reserved.</p>
