--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="container">
-        <section class="footer-inner">
+        <div class="footer-inner">
             <nav class="footer-inner__menu">
                 <ul class="footer-inner__list">
                     <h3 class="menu__h3">PORTFOLIO</h3>
@@ -49,6 +49,6 @@
                 </div>
                 <p>Copiyright © 2015 Syed Miraj.All rights reserved.</p>
             </div>
-        </section>
+        </div>
     </div>
 </footer>
