--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -1,35 +1,34 @@
-
 <footer class="footer">
     <div class="container">
         <div class="footer-inner">
             <nav class="footer-inner__menu">
                 <ul class="footer-inner__list">
                     <h3 class="menu__h3">PORTFOLIO</h3>
-                    <li><a class="link" href="#">Web Design</a></li>
-                    <li><a class="link" href="#">Branding & Idefinity</a></li>
-                    <li><a class="link" href="#">Mobile Design</a></li>
-                    <li><a class="link" href="#">Print</a></li>
-                    <li><a class="link" href="#">User Interfase</a></li>
+                    <li><a class="menu__link" href="#">Web Design</a></li>
+                    <li><a class="menu__link" href="#">Branding & Idefinity</a></li>
+                    <li><a class="menu__link" href="#">Mobile Design</a></li>
+                    <li><a class="menu__link" href="#">Print</a></li>
+                    <li><a class="menu__link" href="#">User Interfase</a></li>
                 </ul>
                 <ul class="footer-inner__list">
                     <h3 class="menu__h3">ABOUT</h3>
-                    <li><a class="link" href="#">The Company</a></li>
-                    <li><a class="link" href="#">History</a></li>
-                    <li><a class="link" href="#">Vision</a></li>
+                    <li><a class="menu__link" href="#">The Company</a></li>
+                    <li><a class="menu__link" href="#">History</a></li>
+                    <li><a class="menu__link" href="#">Vision</a></li>
                 </ul>
                 <ul class="footer-inner__list">
                     <h3 class="menu__h3">GALLERY</h3>
-                    <li><a class="link" href="#">Flickr</a></li>
-                    <li><a class="link" href="#">Picasa</a></li>
-                    <li><a class="link" href="#">iStickPhoto</a></li>
-                    <li><a class="link" href="#">PhotoDune</a></li>
+                    <li><a class="menu__link" href="#">Flickr</a></li>
+                    <li><a class="menu__link" href="#">Picasa</a></li>
+                    <li><a class="menu__link" href="#">iStickPhoto</a></li>
+                    <li><a class="menu__link" href="#">PhotoDune</a></li>
 
                 </ul>
                 <ul class="footer-inner__list">
                     <h3 class="menu__h3">CONTACT</h3>
-                    <li><a class="link" href="#">Basic Info</a></li>
-                    <li><a class="link" href="#">Map</a></li>
-                    <li><a class="link" href="#">Contact Form</a></li>
+                    <li><a class="menu__link" href="#">Basic Info</a></li>
+                    <li><a class="menu__link" href="#">Map</a></li>
+                    <li><a class="menu__link" href="#">Contact Form</a></li>
                 </ul>
             </nav>
 
