--- a/src/templates/partials/_support.html
+++ b/src/templates/partials/_support.html
@@ -1,4 +1,15 @@
 <section class="support">
     <div class="container">
+        <h2 class="support__name grey-name">UPDATES & SUPPORT</h2>
+        <svg class="airplane"></svg>
+        <div class="suppport__inner">
+            <img class="support__img" src="img/png/macbook1.png">
+            <article class="support__text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p> Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
+            </article>
+            <button class="support_button yellow-btn">SUPPORT CENTER</button>
+        </div>
     </div>
 </section>
