--- a/src/templates/partials/_team.html
+++ b/src/templates/partials/_team.html
@@ -1,7 +1,7 @@
 <section class="team">
     <h2 class="team__name grey-name">OUR TEAM MEMBERS</h2>
     <svg class="airplane"></svg>
-    <div class="team__container">
+    <div class="team__wrapper">
         <figure class="team__member">
             <img class="team__img" src="img/svg/team1.svg" alt="Foto of member">
             <figcaption class="member">
