remake grey-name to section-name

--- a/src/templates/partials/_features.html
+++ b/src/templates/partials/_features.html
@@ -1,6 +1,6 @@
 <section class="features">
     <div class="container features__container">
-        <h3 class="features__heading grey-name">our features</h3>
+        <h2 class="features__heading section-name section-name--mw330">our features</h2>
         <div class="features__content">
             <div class="features__section">
                 <img src="img/svg/icons/notes27.svg">
