--- a/src/templates/partials/_process.html
+++ b/src/templates/partials/_process.html
@@ -1,6 +1,6 @@
 <section class="process">
     <div class="container">
-        <h2>how we work</h2>
+        <h2 class="section-name section-name--mw330">how we work</h2>
         <div class="process__content"></div>
     </div>
 </section>
