--- a/src/templates/partials/_team.html
+++ b/src/templates/partials/_team.html
@@ -1,6 +1,6 @@
 <section class="team">
   <div class="container">
-    <h2 class="team__name grey-name">OUR TEAM MEMBERS</h2>
+    <h2 class="team__name section-name section-name--mw330">OUR TEAM MEMBERS</h2>
     <svg class="airplane"></svg>
     <div class="team__wrapper">
         <figure class="team__member">
