--- a/src/templates/partials/_services.html
+++ b/src/templates/partials/_services.html
@@ -1,6 +1,6 @@
 <section class="services">
     <div class="container">
-        <h2>what we do</h2>
+        <h2 class="section-name section-name--mw330">what we do</h2>
         <div class="services__block">
             <article class="services__content">
                 <h3>search engine optimization</h3>
