--- a/src/templates/partials/_welcome.html
+++ b/src/templates/partials/_welcome.html
@@ -13,7 +13,7 @@
                     aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione. voluptatem sequi. nesciunt.
                     Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia
                     non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-                <a class="hero__more" href="#">View More</a>
+                <a class="button__icon--right" href="#">View More</a>
             </figcaption>
             <div class="hero__sliderBox"></div>
         </figure>
