add h2 title to rest of sections

--- a/src/templates/partials/_packages.html
+++ b/src/templates/partials/_packages.html
@@ -1,5 +1,5 @@
 <section class="packages">
     <div class="container">
-        <h2 class="section-name section-name--mw330"></h2>
+        <h2 class="section-name section-name--mw330">OUR PACKAGES</h2>
     </div>
 </section>
