--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -14,6 +14,7 @@ section-name + section-name--mw220 или section-name--mw330 */
     font-family: $h2-font-family;
     background-color: #464646;
     text-align: center;
+    text-transform: uppercase;
     // margin: 0 auto;
     margin-left: 50%;
     transform: translateX(-50%);
