--- a/src/templates/partials/_history.html
+++ b/src/templates/partials/_history.html
@@ -1,5 +1,5 @@
 <section class="history">
     <div class="container">
-        <h2 class="section-name section-name--mw220"></h2>
+        <h2 class="section-name section-name--mw220">OUR HISTORY</h2>
     </div>
 </section>
